# yolov8

./: .gitignore  README.md  convert_yolo_weights.py  export_model.py  inference.py  pyproject.toml  train.py
model/: __init__.py  misc.py
model/config/: yolov8n.yaml
model/config/datasets/: coco128.yaml  coco8.yaml
model/config/models/: yolov8n.yaml
model/config/training/: fine_tune.yaml
model/data/: dataset.py  detections.py  utils.py
model/models/: __init__.py  base_model.py  detection_model.py
model/modules/: __init__.py  block.py  conv.py  head.py  utils.py
model/utils/: loss.py  metrics.py  ops.py  tal.py
model/visualization/: view_dataset.py
